--- a/Contact.html
+++ b/Contact.html
@@ -64,9 +64,6 @@
     <p>Call:
       <a href="tel:16233124578">623-312-4578</a>
     </p>
-    <p>Email:
-      <a href="mailto:Elmirage19@gmail.com">Elmirage19@gmail.com</a>
-    </p>
     <p>Twitter:
       <a href="https://twitter.com/NicholasLe19"><i class="fab fa-twitter"></i></a>
     </p>
@@ -78,6 +75,17 @@
           class="fab fa-slack"></i></a>
     </p>
   </article>
+<aside>
+  <a id="foxyform_embed_link_937465" href="http://www.foxyform.com/">foxyform</a>
+  <script type="text/javascript">
+  (function(d, t){
+     var g = d.createElement(t),
+         s = d.getElementsByTagName(t)[0];
+     g.src = "http://www.foxyform.com/js.php?id=937465&sec_hash=b98a79862cb&width=350px";
+     s.parentNode.insertBefore(g, s);
+  }(document, "script"));
+  </script>
+</aside>
 
   <footer>
     10382 W Cashman Dr &#3663; Peoria, Arizona 85383
