--- a/Experience.html
+++ b/Experience.html
@@ -46,7 +46,7 @@
     </header>
     <article id="work">
         <h2>Work Experience</h2>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p></p>
     </article>
 
     <section>
@@ -60,6 +60,9 @@
         <ul>
             <li>
                 <a href="https://nle031.github.io/event-website/">Collaboration Project</a>
+            </li>
+            <li>
+                <a href="https://nle031.github.io/Nicholas-Le-Resume-Portfolio/">Resume Portfolio</a>
             </li>
         </ul>
 
