--- a/Experience.html
+++ b/Experience.html
@@ -46,7 +46,7 @@
     </header>
     <article id="work">
         <h2>Work Experience</h2>
-        <p>Catering, Paradise Hills Estates, 11/2018/08</p>
+        <p>Catering, Paradise Hills Estates AZ, 11/2018/08</p>
     </article>
 
     <section>
