--- a/Contact.html
+++ b/Contact.html
@@ -24,6 +24,11 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT"
     crossorigin="anonymous">
+  <!-- Mobile Icon -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css" integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT"
+    crossorigin="anonymous">
 </head>
 
 <body>
@@ -62,30 +67,30 @@
     </p>
 
     <p>Call:
-      <a href="tel:16233124578">623-312-4578</a>
+      <a href="tel:16233124578"><i class="fas fa-mobile-alt fa-2x"></i></a>
     </p>
     <p>Twitter:
-      <a href="https://twitter.com/NicholasLe19"><i class="fab fa-twitter"></i></a>
+      <a href="https://twitter.com/NicholasLe19"><i class="fab fa-twitter fa-2x"></i></a>
     </p>
     <p>GitHub:
-      <a href="https://github.com/NLe031"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/NLe031"><i class="fab fa-github fa-2x"></i></a>
     </p>
     <p>Slack:
       <a href="https://join.slack.com/t/nicholas-le/shared_invite/enQtNDcwODIyMTMzODI4LWRmNTA1M2NhMTkxZmZjZDIzNGYwMDk1NjQ4MGQwOWJjZmY3Mjc0YmRlMDMyZWM3YmMxZDJlNWJmY2ZiYWM0NWE"><i
-          class="fab fa-slack"></i></a>
+          class="fab fa-slack fa-2x"></i></a>
     </p>
   </article>
-<aside>
-  <a id="foxyform_embed_link_937465" href="http://www.foxyform.com/">foxyform</a>
-  <script type="text/javascript">
-  (function(d, t){
-     var g = d.createElement(t),
-         s = d.getElementsByTagName(t)[0];
-     g.src = "http://www.foxyform.com/js.php?id=937465&sec_hash=b98a79862cb&width=350px";
-     s.parentNode.insertBefore(g, s);
-  }(document, "script"));
-  </script>
-</aside>
+  <aside>
+    <a id="foxyform_embed_link_937465" href="http://www.foxyform.com/">foxyform</a>
+    <script type="text/javascript">
+      (function (d, t) {
+        var g = d.createElement(t),
+          s = d.getElementsByTagName(t)[0];
+        g.src = "http://www.foxyform.com/js.php?id=937465&sec_hash=b98a79862cb&width=350px";
+        s.parentNode.insertBefore(g, s);
+      }(document, "script"));
+    </script>
+  </aside>
 
   <footer>
     10382 W Cashman Dr &#3663; Peoria, Arizona 85383
