--- a/Experience.html
+++ b/Experience.html
@@ -57,14 +57,15 @@
     </section>
     <article id="websites">
         <h2>Websites</h2>
-        <ul>
-            <li>
+        <dl>
+            <dt>
                 <a href="https://nle031.github.io/event-website/">Collaboration Project</a>
-            </li>
-            <li>
-                <a href="https://nle031.github.io/Nicholas-Le-Resume-Portfolio/">Resume Portfolio</a>
-            </li>
-        </ul>
+            </dt>
+            <dd>This is a project that was created during a hackathon which will be updated periodically.</dd>
+            <dt>
+                <a href="https://nle031.github.io/Second-Resume-Portfolio/">Second Resume Portfolio</a>
+            </dt>
+        </dl>
 
     </article>
 
