--- a/Experience.html
+++ b/Experience.html
@@ -63,7 +63,7 @@
             </dt>
             <dd>This is a project that was created during a hackathon which will be updated periodically.</dd>
             <dt>
-                <a href="https://nle031.github.io/Nicholas-Le-Resume-Portfolio/">Resume Portfolio</a>
+                <a href="https://nle031.github.io/Resume-Portfolio/">Resume Portfolio</a>
             </dt>
         </dl>
 
